Add Events, EventDispatcher, ImGui, glad. ADD 2 SHADERS OMG AND PRINT TRIANGLE OMG

--- a/EngineCore/CmakeLists.txt
+++ b/EngineCore/CmakeLists.txt
@@ -5,23 +5,60 @@ set(ENGINE_PROJECT_NAME EngineCore)
 set(ENGINE_PUBLIC_INCLUDES
         includes/EngineCore/Application.hpp 
         includes/EngineCore/Logs.hpp 
+        includes/EngineCore/Event.hpp 
+)
+
+set(ENGINE_PRIVATE_INCLUDES
+    includes/EngineCore/Window.hpp 
 )
 
 set(ENGINE_PRIVATE_SOURCES
     src/EngineCore/Application.cpp
+    src/EngineCore/Window.cpp
 )
 
 add_library(${ENGINE_PROJECT_NAME} STATIC 
     ${ENGINE_PUBLIC_INCLUDES}
+    ${ENGINE_PRIVATE_INCLUDES}
     ${ENGINE_PRIVATE_SOURCES}
 )
 
 target_include_directories(${ENGINE_PROJECT_NAME} PUBLIC includes)
+target_include_directories(${ENGINE_PROJECT_NAME} PRIVATE src)
 target_compile_features(${ENGINE_PROJECT_NAME} PUBLIC cxx_std_20)
 
 add_subdirectory(../external/glfw ${CMAKE_CURRENT_BINARY_DIR}/glfw)
 target_link_libraries(${ENGINE_PROJECT_NAME} PRIVATE glfw)
 
 add_subdirectory(../external/spdlog ${CMAKE_CURRENT_BINARY_DIR}/spdlog)
-target_link_libraries(${ENGINE_PROJECT_NAME} PRIVATE spdlog)
+target_link_libraries(${ENGINE_PROJECT_NAME} PUBLIC spdlog)
 
+add_subdirectory(../external/glad ${CMAKE_CURRENT_BINARY_DIR}/glad)
+target_link_libraries(${ENGINE_PROJECT_NAME} PRIVATE glad)
+
+set(IMGUI_INCLUDES
+    ../external/ImGui/imgui.h 
+    ../external/ImGui/backends/imgui_impl_glfw.h 
+    ../external/ImGui/backends/imgui_impl_opengl3.h 
+)
+
+set(IMGUI_SOURCES 
+    ../external/ImGui/imgui.cpp
+    ../external/ImGui/backends/imgui_impl_glfw.cpp  
+    ../external/ImGui/backends/imgui_impl_opengl3.cpp 
+    ../external/ImGui/imgui_demo.cpp 
+    ../external/ImGui/imgui_tables.cpp 
+    ../external/ImGui/imgui_widgets.cpp 
+    ../external/ImGui/imgui_draw.cpp 
+)
+
+add_library(IMGUI STATIC 
+    ${IMGUI_INCLUDES}
+    ${IMGUI_SOURCES}
+)
+
+target_include_directories(IMGUI PUBLIC ../external)
+target_include_directories(IMGUI PUBLIC ../external/ImGui)
+target_link_libraries(IMGUI PRIVATE glad glfw)
+
+target_link_libraries(${ENGINE_PROJECT_NAME} PRIVATE IMGUI)
