--- a/EngineCore/CmakeLists.txt
+++ b/EngineCore/CmakeLists.txt
@@ -7,24 +7,35 @@ set(ENGINE_PUBLIC_INCLUDES
         includes/EngineCore/Logs.hpp 
         includes/EngineCore/Event.hpp 
         includes/EngineCore/Camera.hpp 
+        includes/EngineCore/Keys.hpp
+        includes/EngineCore/Input.hpp 
 )
 
 set(ENGINE_PRIVATE_INCLUDES
     includes/EngineCore/Window.hpp
+ 
     src/EngineCore/Rendering/OpenGL/ShaderProgram.hpp 
     src/EngineCore/Rendering/OpenGL/VertexBuffer.hpp  
     src/EngineCore/Rendering/OpenGL/VertexArray.hpp  
     src/EngineCore/Rendering/OpenGL/IndexBuffer.hpp 
+    src/EngineCore/Rendering/OpenGL/Renderer_OpenGL.hpp 
+
+    src/EngineCore/Modules/UIModule.hpp
 )
 
 set(ENGINE_PRIVATE_SOURCES
     src/EngineCore/Application.cpp
     src/EngineCore/Window.cpp
     src/EngineCore/Camera.cpp
+    src/EngineCore/Input.cpp 
+
     src/EngineCore/Rendering/OpenGL/ShaderProgram.cpp
     src/EngineCore/Rendering/OpenGL/VertexBuffer.cpp
     src/EngineCore/Rendering/OpenGL/VertexArray.cpp 
     src/EngineCore/Rendering/OpenGL/IndexBuffer.cpp 
+    src/EngineCore/Rendering/OpenGL/Renderer_OpenGL.cpp 
+
+    src/EngineCore/Modules/UIModule.cpp
 )
 
 set(ENGINE_ALL_SOURCES 
