--- a/EngineEditor/CmakeLists.txt
+++ b/EngineEditor/CmakeLists.txt
@@ -6,7 +6,7 @@ add_executable(${EDITOR_PROJECT_NAME}
     src/main.cpp 
 )
 
-target_link_libraries(${EDITOR_PROJECT_NAME} EngineCore)
+target_link_libraries(${EDITOR_PROJECT_NAME} EngineCore IMGUI glm)
 target_compile_features(${EDITOR_PROJECT_NAME} PUBLIC cxx_std_20)
 
 set_target_properties(${EDITOR_PROJECT_NAME} 
