Add several features. Small refactoring. Add model loading with assimp model loader.

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 project(3DEngine)
 set(PROJECT_NAME 3DEngine)
 
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
+
+
 add_subdirectory(EngineCore)
 add_subdirectory(EngineEditor)
 
