--- a/EngineEditor/CmakeLists.txt
+++ b/EngineEditor/CmakeLists.txt
@@ -2,9 +2,8 @@ cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 
 set(EDITOR_PROJECT_NAME EngineEditor)
 
-add_executable(${EDITOR_PROJECT_NAME} 
-    src/main.cpp 
-)
-
+add_executable(${EDITOR_PROJECT_NAME} src/main.cpp)
 target_link_libraries(${EDITOR_PROJECT_NAME} EngineCore IMGUI glm)
 target_compile_features(${EDITOR_PROJECT_NAME} PUBLIC cxx_std_20)
+
+
